[package]
name = "touchies"
version = "0.1.0"
authors = ["Igor Loskutov <igor.loskutoff@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.bevy]
version = "0.11.3"
default-features = false
features = [
#    "bevy_render",
#    "bevy_asset",
#    "png",
#    "bevy_winit",
#    "bevy_text",
#    "bevy_ui",
#    "bevy_render",
    "bevy_winit",
#    "bevy_core_pipeline"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
